--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,10 +1,10 @@
-require:
-  rubocop-rails
+plugins:
+  - rubocop-rails
 
 inherit_from:
-  config/rubocop/rubocop.yml
-  config/rubocop/rails.yml
-  config/rubocop/rspec.yml
+  - config/rubocop/rubocop.yml
+  - config/rubocop/rails.yml
+  - config/rubocop/rspec.yml
 
 AllCops:
   TargetRubyVersion: 3.1
